--- a/references.bib
+++ b/references.bib
@@ -11,3 +11,13 @@ doi = {10.1080/09332480.2013.772392},
 URL = {http://www.tandfonline.com/doi/abs/10.1080/09332480.2013.772392},
 eprint = {http://www.tandfonline.com/doi/pdf/10.1080/09332480.2013.772392}
 }
+
+@article{hadley:2014,
+author = {Wickham},
+title = {Tidy Data},
+journal = {Under review},
+year = {2014},
+
+URL = {http://vita.had.co.nz/papers/tidy-data.pdf},
+eprint = {http://vita.had.co.nz/papers/tidy-data.pdf}
+}
